--- a/release-notes/4.7.23.md
+++ b/release-notes/4.7.23.md
@@ -9,115 +9,181 @@ Released August 2, 2017;
 
 ## <a name="features"></a>Features
 
-### Import
-
-- **[CRM-20759](https://issues.civicrm.org/jira/browse/CRM-20759) Import, add 'Primary' as an address location ([10738](https://github.com/civicrm/civicrm-core/pull/10738), [10565](https://github.com/civicrm/civicrm-core/pull/10565), [10594](https://github.com/civicrm/civicrm-core/pull/10594), [10554](https://github.com/civicrm/civicrm-core/pull/10554), and [10547](https://github.com/civicrm/civicrm-core/pull/10547))**
-
 ### Core CiviCRM
 
-- **[CRM-20837](https://issues.civicrm.org/jira/browse/CRM-20837) Make setting bug more explicit ([10627](https://github.com/civicrm/civicrm-core/pull/10627))**
+- **[CRM-20830](https://issues.civicrm.org/jira/browse/CRM-20830) Improve
+  handling of overdue activities
+  ([10618](https://github.com/civicrm/civicrm-core/pull/10618))**
 
-- **[CRM-20847](https://issues.civicrm.org/jira/browse/CRM-20847) Support custom api with composite primary keys ([10599](https://github.com/civicrm/civicrm-core/pull/10599))**
+  Activity statuses can now be edited to denote whether activities with a given
+  status should be considered "complete" or not.  This attribute is now the
+  basis for determining whether an activity is overdue.  In addition to UI
+  indications of being overdue, the API can return this value for each activity.
 
-- **[CRM-20677](https://issues.civicrm.org/jira/browse/CRM-20677) Use generalised function to retrieve financial account ([10463](https://github.com/civicrm/civicrm-core/pull/10463))**
+- **[CRM-20803](https://issues.civicrm.org/jira/browse/CRM-20803) Enable Farsi
+  (fa_IR), Serbian (sr_RS), Ukrainian (uk_UA) in the languages option group so
+  that we can install in those languages
+  ([10667](https://github.com/civicrm/civicrm-core/pull/10667))**
 
-- **[CRM-20830](https://issues.civicrm.org/jira/browse/CRM-20830) Improve handling of overdue activities ([10618](https://github.com/civicrm/civicrm-core/pull/10618))**
+  These languages can now be used for installation of CiviCRM.
 
-- **[CRM-20794](https://issues.civicrm.org/jira/browse/CRM-20794) Colors for case status ([10586](https://github.com/civicrm/civicrm-core/pull/10586))**
+- **[CRM-20759](https://issues.civicrm.org/jira/browse/CRM-20759) Import, add
+  'Primary' as an address location
+  ([10738](https://github.com/civicrm/civicrm-core/pull/10738),
+  [10565](https://github.com/civicrm/civicrm-core/pull/10565),
+  [10594](https://github.com/civicrm/civicrm-core/pull/10594),
+  [10554](https://github.com/civicrm/civicrm-core/pull/10554), and
+  [10547](https://github.com/civicrm/civicrm-core/pull/10547))**
 
-- **[CRM-20849](https://issues.civicrm.org/jira/browse/CRM-20849) Multiple extensions using the same autoloader prefix will overwrite previous ([10637](https://github.com/civicrm/civicrm-core/pull/10637))**
+  Columns in imports can now import to fields in the matching contact's primary
+  address, regardless of location type.
 
-- **[CRM-20321](https://issues.civicrm.org/jira/browse/CRM-20321) Changing membership type should change related contribution ([10642](https://github.com/civicrm/civicrm-core/pull/10642) and [10370](https://github.com/civicrm/civicrm-core/pull/10370))**
+- **[CRM-20793](https://issues.civicrm.org/jira/browse/CRM-20793) Add filter -
+  activity date and status on search criteria of activity listing
+  ([10588](https://github.com/civicrm/civicrm-core/pull/10588))**
 
-- **[CRM-20842](https://issues.civicrm.org/jira/browse/CRM-20842) Change api explorer page title ([10633](https://github.com/civicrm/civicrm-core/pull/10633))**
+  The activity tab on a contact record now allows filtering by date and status
+  besides just activity type.  In addition, a site-wide option toggles whether a
+  user's filters on one contact's activities persist as they visit other
+  contacts.
 
-- **[CRM-20786](https://issues.civicrm.org/jira/browse/CRM-20786) Move deprecated utils functions to the import classes ([10578](https://github.com/civicrm/civicrm-core/pull/10578), [10580](https://github.com/civicrm/civicrm-core/pull/10580), [10579](https://github.com/civicrm/civicrm-core/pull/10579), and [10581](https://github.com/civicrm/civicrm-core/pull/10581))**
+- **[CRM-20847](https://issues.civicrm.org/jira/browse/CRM-20847) Support custom
+  api with composite primary keys
+  ([10599](https://github.com/civicrm/civicrm-core/pull/10599))**
 
-- **[CRM-20780](https://issues.civicrm.org/jira/browse/CRM-20780) Add drupal option to define CMS_ROOT ([10574](https://github.com/civicrm/civicrm-core/pull/10574))**
+  This change adds testing for custom APIs using the basic get function and
+  avoids automatically selecting the `id` field if there is no such field in the
+  spec.
 
-- **[CRM-20778](https://issues.civicrm.org/jira/browse/CRM-20778) Use civicontribute permission for contribution recur.cancel ([10569](https://github.com/civicrm/civicrm-core/pull/10569))**
+- **[CRM-20842](https://issues.civicrm.org/jira/browse/CRM-20842) Change api
+  explorer page title
+  ([10633](https://github.com/civicrm/civicrm-core/pull/10633))**
 
-- **[CRM-20169](https://issues.civicrm.org/jira/browse/CRM-20169) Add support for alterReportVar hook in Activity Report ([9886](https://github.com/civicrm/civicrm-core/pull/9886))**
+  The API Explorer now explicitly states it is demonstrating API v3.
 
-- **[CRM-20721](https://issues.civicrm.org/jira/browse/CRM-20721) Add parameter to dateQueryBuilder fn to change date value to desired format ([10497](https://github.com/civicrm/civicrm-core/pull/10497))**
+- **[CRM-20780](https://issues.civicrm.org/jira/browse/CRM-20780) Add settings
+  file option to define CMS_ROOT
+  ([10574](https://github.com/civicrm/civicrm-core/pull/10574))**
 
-- **[CRM-20739](https://issues.civicrm.org/jira/browse/CRM-20739) contact import doesn't add to group on fill if matching without ID ([10507](https://github.com/civicrm/civicrm-core/pull/10507))**
+  The CiviCRM settings file can now explicitly set the path to the CMS root.
 
-- **[CRM-20771](https://issues.civicrm.org/jira/browse/CRM-20771) Ensure that AddColumn in CRM_Upgrade_Incremental_Base can support translatable columns ([10561](https://github.com/civicrm/civicrm-core/pull/10561))**
+- **[CRM-20169](https://issues.civicrm.org/jira/browse/CRM-20169) Add support
+  for alterReportVar hook in Activity Report
+  ([9886](https://github.com/civicrm/civicrm-core/pull/9886))**
 
-- **[CRM-20756](https://issues.civicrm.org/jira/browse/CRM-20756) Multi tab structure ([10545](https://github.com/civicrm/civicrm-core/pull/10545))**
+  Extensions can now modify the SQL of the Activity Report.
 
-- **[CRM-20666](https://issues.civicrm.org/jira/browse/CRM-20666) enable uploading of files to activities that are up to 255 characters in length ([10449](https://github.com/civicrm/civicrm-core/pull/10449))**
+- **[CRM-20721](https://issues.civicrm.org/jira/browse/CRM-20721) Add parameter
+  to dateQueryBuilder fn to change date value to desired format
+  ([10497](https://github.com/civicrm/civicrm-core/pull/10497))**
 
-- **[CRM-20682](https://issues.civicrm.org/jira/browse/CRM-20682) Include human readable contribution's custom field label in token widget for Thankyou letter ([10467](https://github.com/civicrm/civicrm-core/pull/10467))**
+  Queries on fields formatted in ways other than the typical MySQL date format
+  can now use the standard date query builder method in the contact BAO.
 
-### Internationalisation
+- **[CRM-20600](https://issues.civicrm.org/jira/browse/CRM-20600) Expose
+  AngularJS screens to hooks
+  ([10644](https://github.com/civicrm/civicrm-core/pull/10644)) (follow-up
+  work)**
 
-- **[CRM-20803](https://issues.civicrm.org/jira/browse/CRM-20803) Enable Farsi (fa_IR), Serbian (sr_RS), Ukrainian (uk_UA) in the languages option group so that we can install in those languages ([10667](https://github.com/civicrm/civicrm-core/pull/10667))**
+  A message now displays both before and after upgrade if a site's configuration
+  is likely to prevent successful asset-caching.
 
-### CiviMail, Core CiviCRM
+- **[CRM-20673](https://issues.civicrm.org/jira/browse/CRM-20673) Tag and group
+  edit form: implement Select2 for tags
+  ([10634](https://github.com/civicrm/civicrm-core/pull/10634)) (completes
+  previous work)**
 
-- **[CRM-20600](https://issues.civicrm.org/jira/browse/CRM-20600) Expose AngularJS screens to hooks ([10644](https://github.com/civicrm/civicrm-core/pull/10644))**
+  Tags are now listed in the widget in the same order as they are displayed for
+  management.
 
-### Core CiviCRM, NYSS
+- **[CRM-20622](https://issues.civicrm.org/jira/browse/CRM-20622) contact edit:
+  tags and groups panel layout/styling
+  ([10429](https://github.com/civicrm/civicrm-core/pull/10429))**
 
-- **[CRM-20673](https://issues.civicrm.org/jira/browse/CRM-20673) Tag and group edit form: implement Select2 for tags ([10634](https://github.com/civicrm/civicrm-core/pull/10634))**
-
-- **[CRM-20622](https://issues.civicrm.org/jira/browse/CRM-20622) contact edit: tags and groups panel layout/styling ([10429](https://github.com/civicrm/civicrm-core/pull/10429))**
-
-### CiviCRM API
-
-- **[CRM-20833](https://issues.civicrm.org/jira/browse/CRM-20833) Change namespace for APIv4 entities ([10632](https://github.com/civicrm/civicrm-core/pull/10632) and [10625](https://github.com/civicrm/civicrm-core/pull/10625))**
-
-### CiviCRM Search, NYSS
-
-- **[CRM-20793](https://issues.civicrm.org/jira/browse/CRM-20793) Add filter - activity date and status on search criteria of activity listing   ([10588](https://github.com/civicrm/civicrm-core/pull/10588))**
+  The tag and group editing interface now uses standard markup rather than
+  unique, outdated approaches.
 
 ### CiviCase
 
-- **[CRM-20816](https://issues.civicrm.org/jira/browse/CRM-20816) Case multi/single client settings ([10609](https://github.com/civicrm/civicrm-core/pull/10609))**
+- **[CRM-20794](https://issues.civicrm.org/jira/browse/CRM-20794) Colors for
+  case status ([10586](https://github.com/civicrm/civicrm-core/pull/10586))
+  (preliminary work)**
 
-- **[CRM-20776](https://issues.civicrm.org/jira/browse/CRM-20776) Menu structure ([10573](https://github.com/civicrm/civicrm-core/pull/10573))**
+  When editing case statuses, you may now select a color.  However, case display
+  does not yet show the status colors.
 
-### CiviReport
+- **[CRM-20756](https://issues.civicrm.org/jira/browse/CRM-20756) Multi tab
+  structure ([10545](https://github.com/civicrm/civicrm-core/pull/10545))
+  (preliminary work)**
 
-- **[CRM-20640](https://issues.civicrm.org/jira/browse/CRM-20640) contribution summary report: duplicates values with group filter ([10603](https://github.com/civicrm/civicrm-core/pull/10603) and [10596](https://github.com/civicrm/civicrm-core/pull/10596))**
+  The AngularJS `ui.bootstrap` library is now included in CiviCRM.
 
-### CiviCase, CiviCRM API
+- **[CRM-20816](https://issues.civicrm.org/jira/browse/CRM-20816) Case
+  multi/single client settings
+  ([10609](https://github.com/civicrm/civicrm-core/pull/10609))**
 
-- **[CRM-20802](https://issues.civicrm.org/jira/browse/CRM-20802) CaseType.create - Stale definition retained in memory ([10591](https://github.com/civicrm/civicrm-core/pull/10591))**
-
-### CiviMail, NYSS
-
-- **[CRM-20781](https://issues.civicrm.org/jira/browse/CRM-20781) Truncate long text in mail listing  ([10576](https://github.com/civicrm/civicrm-core/pull/10576))**
-
-### CiviMember
-
-- **[CRM-20716](https://issues.civicrm.org/jira/browse/CRM-20716) Array to string issue on php7 when creating membership activity ([10492](https://github.com/civicrm/civicrm-core/pull/10492))**
-
-- **[CRM-20650](https://issues.civicrm.org/jira/browse/CRM-20650) Translate strings (ts) in CiviMember dashboard and Contribute manage ([10432](https://github.com/civicrm/civicrm-core/pull/10432))**
+  Settings for redacting activity emails, allowing multiple clients per case,
+  and the sort order of activity types can now be modified in an administrative
+  form rather than exclusively in XML files defining case types.
 
 ### CiviContribute
 
-- **[CRM-20765](https://issues.civicrm.org/jira/browse/CRM-20765) Missing id for 'onBehalfOfOrg' section ([10550](https://github.com/civicrm/civicrm-core/pull/10550))**
+- **[CRM-20778](https://issues.civicrm.org/jira/browse/CRM-20778) Use
+  civicontribute permission for contribution recur.cancel
+  ([10569](https://github.com/civicrm/civicrm-core/pull/10569))**
 
-- **[CRM-20753](https://issues.civicrm.org/jira/browse/CRM-20753) Net amount doesn't respect localization ([10536](https://github.com/civicrm/civicrm-core/pull/10536))**
+  The permissions to view, modify, cancel, and delete recurring contributions
+  now mirror the corresponding permissions needed for working with payments.
 
-### CiviEvent
+- **[CRM-20682](https://issues.civicrm.org/jira/browse/CRM-20682) Include human
+  readable contribution's custom field label in token widget for Thankyou letter
+  ([10467](https://github.com/civicrm/civicrm-core/pull/10467))**
 
-- **[CRM-20741](https://issues.civicrm.org/jira/browse/CRM-20741) Cancellation message shown as error ([10515](https://github.com/civicrm/civicrm-core/pull/10515))**
+  Contribution custom field tokens are now listed among the available tokens in
+  the Thank-you Letter form.  They had been processed, but there was no
+  indication that they were available.
 
-### Drupal Integration Modules
+### Drupal Integration
 
-- **[CRM-20751](https://issues.civicrm.org/jira/browse/CRM-20751) Support Drupal aliases for event links in Views ([456](https://github.com/civicrm/civicrm-drupal/pull/456) and [455](https://github.com/civicrm/civicrm-drupal/pull/455))**
+- **[CRM-20751](https://issues.civicrm.org/jira/browse/CRM-20751) Support Drupal
+  aliases for event links in Views
+  ([456](https://github.com/civicrm/civicrm-drupal/pull/456) and
+  [455](https://github.com/civicrm/civicrm-drupal/pull/455))**
+
+  If a CiviCRM event has a Drupal alias set for it, views linking to the event
+  will now link to the alias rather than the CiviCRM URL.
 
 ## <a name="bugs"></a>Bugs resolved
 
-### CiviContribute, CiviMember
-
-- **[CRM-18177](https://issues.civicrm.org/jira/browse/CRM-18177) When Renewing an existing membership, if CC details are incorrect, Membership is set to Cancelled preventing contact from trying again ([10770](https://github.com/civicrm/civicrm-core/pull/10770))**
-
 ### Core CiviCRM
+
+- **[CRM-20849](https://issues.civicrm.org/jira/browse/CRM-20849) Multiple
+  extensions using the same autoloader prefix will overwrite previous
+  ([10637](https://github.com/civicrm/civicrm-core/pull/10637))**
+
+- **[CRM-20739](https://issues.civicrm.org/jira/browse/CRM-20739) contact import
+  doesn't add to group on fill if matching without ID
+  ([10507](https://github.com/civicrm/civicrm-core/pull/10507))**
+
+- **[CRM-20666](https://issues.civicrm.org/jira/browse/CRM-20666) enable
+  uploading of files to activities that are up to 255 characters in length
+  ([10449](https://github.com/civicrm/civicrm-core/pull/10449))**
+
+  File names of activity uploads had previously been capped at 60 characters.
+
+- **[CRM-20776](https://issues.civicrm.org/jira/browse/CRM-20776) Menu structure
+  ([10573](https://github.com/civicrm/civicrm-core/pull/10573))**
+
+  This fixes incorrect handling of URL paths, queries and fragments in the
+  navigation menu.  This was a particular problem for AngularJS pages.
+
+- **[CRM-20640](https://issues.civicrm.org/jira/browse/CRM-20640) contribution
+  summary report: duplicates values with group filter
+  ([10603](https://github.com/civicrm/civicrm-core/pull/10603) and
+  [10596](https://github.com/civicrm/civicrm-core/pull/10596))**
+
+  Reports with group filters would display rows twice if multiple groups were
+  selected in the filter and contacts were in more than one of those groups.
 
 - **[CRM-20953](https://issues.civicrm.org/jira/browse/CRM-20953) Importing contacts with deceased_date not setting is_deceased ([10742](https://github.com/civicrm/civicrm-core/pull/10742))**
 
@@ -247,7 +313,26 @@ Released August 2, 2017;
 
 - **[CRM-19702](https://issues.civicrm.org/jira/browse/CRM-19702) Fatal error when merging contact records with custom file fields ([9784](https://github.com/civicrm/civicrm-core/pull/9784))**
 
+### CiviCase
+
+- **[CRM-20802](https://issues.civicrm.org/jira/browse/CRM-20802)
+  CaseType.create - Stale definition retained in memory
+  ([10591](https://github.com/civicrm/civicrm-core/pull/10591))**
+
+  Cached case type information was retained even after modifying the case type.
+
 ### CiviContribute
+
+- **[CRM-20765](https://issues.civicrm.org/jira/browse/CRM-20765) Missing id for
+  'onBehalfOfOrg' section
+  ([10550](https://github.com/civicrm/civicrm-core/pull/10550))**
+
+  The `<div>` containing on-behalf section on contribution pages lacks the
+  `onBehalfOfOrg` ID attribute that it had in 4.6.
+
+- **[CRM-20753](https://issues.civicrm.org/jira/browse/CRM-20753) Net amount
+  doesn't respect localization
+  ([10536](https://github.com/civicrm/civicrm-core/pull/10536))**
 
 - **[CRM-20773](https://issues.civicrm.org/jira/browse/CRM-20773) Contribution tab shows Receive Date twice instead of Thank You date ([10607](https://github.com/civicrm/civicrm-core/pull/10607))**
 
@@ -275,6 +360,19 @@ Released August 2, 2017;
 
 ### CiviMember
 
+- **[CRM-20716](https://issues.civicrm.org/jira/browse/CRM-20716) Array to
+  string issue on php7 when creating membership activity
+  ([10492](https://github.com/civicrm/civicrm-core/pull/10492))**
+
+- **[CRM-20650](https://issues.civicrm.org/jira/browse/CRM-20650) Translate
+  strings (ts) in CiviMember dashboard and Contribute manage
+  ([10432](https://github.com/civicrm/civicrm-core/pull/10432))**
+
+- **[CRM-18177](https://issues.civicrm.org/jira/browse/CRM-18177) When Renewing
+  an existing membership, if CC details are incorrect, Membership is set to
+  Cancelled preventing contact from trying again
+  ([10770](https://github.com/civicrm/civicrm-core/pull/10770)) (fix to problem introduced in original bug fix)**
+
 - **[CRM-20567](https://issues.civicrm.org/jira/browse/CRM-20567) backoffice membership via price set errors with non-aggregated column ([10346](https://github.com/civicrm/civicrm-core/pull/10346))**
 
 - **[CRM-20720](https://issues.civicrm.org/jira/browse/CRM-20720) CIVICRM-128 Unable to sort Price Options for Price Fieldset. Weight values are not being set at all in database. ([10542](https://github.com/civicrm/civicrm-core/pull/10542))**
@@ -295,9 +393,20 @@ Released August 2, 2017;
 
 ### CiviEvent
 
+- **[CRM-20741](https://issues.civicrm.org/jira/browse/CRM-20741) Cancellation
+  message shown as error
+  ([10515](https://github.com/civicrm/civicrm-core/pull/10515))**
+
 - **[CRM-19745](https://issues.civicrm.org/jira/browse/CRM-19745) Image URL field doesn't show up on CiviEvent Additional Participants Profile ([9777](https://github.com/civicrm/civicrm-core/pull/9777))**
 
 ### CiviMail
+
+- **[CRM-20781](https://issues.civicrm.org/jira/browse/CRM-20781) Truncate long
+  text in mail listing
+  ([10576](https://github.com/civicrm/civicrm-core/pull/10576))**
+
+  Long values in columns would crowd other columns off the screen or into
+  illegibility.
 
 - **[CRM-20713](https://issues.civicrm.org/jira/browse/CRM-20713) db error when populating mailing recipients because sms_provider_id is 'null' ([10487](https://github.com/civicrm/civicrm-core/pull/10487))**
 
@@ -312,6 +421,32 @@ Released August 2, 2017;
 - **[CRM-19976](https://issues.civicrm.org/jira/browse/CRM-19976) Drush: cannot disable civicrm debug ([457](https://github.com/civicrm/civicrm-drupal/pull/457))**
 
 ## <a name="misc"></a>Miscellany
+
+- **[CRM-20837](https://issues.civicrm.org/jira/browse/CRM-20837) Make setting
+  bug more explicit
+  ([10627](https://github.com/civicrm/civicrm-core/pull/10627))**
+
+- **[CRM-20677](https://issues.civicrm.org/jira/browse/CRM-20677) Use
+  generalised function to retrieve financial account
+  ([10463](https://github.com/civicrm/civicrm-core/pull/10463))**
+
+- **[CRM-20786](https://issues.civicrm.org/jira/browse/CRM-20786) Move
+  deprecated utils functions to the import classes
+  ([10578](https://github.com/civicrm/civicrm-core/pull/10578),
+  [10580](https://github.com/civicrm/civicrm-core/pull/10580),
+  [10579](https://github.com/civicrm/civicrm-core/pull/10579), and
+  [10581](https://github.com/civicrm/civicrm-core/pull/10581))**
+
+- **[CRM-20771](https://issues.civicrm.org/jira/browse/CRM-20771) Ensure that
+  AddColumn in CRM_Upgrade_Incremental_Base can support translatable columns
+  ([10561](https://github.com/civicrm/civicrm-core/pull/10561))**
+
+- **[CRM-20833](https://issues.civicrm.org/jira/browse/CRM-20833) Change
+  namespace for APIv4 entities
+  ([10632](https://github.com/civicrm/civicrm-core/pull/10632) and
+  [10625](https://github.com/civicrm/civicrm-core/pull/10625))**
+
+  The namespace is now `Civi\Api4\Entity` rather than `Civi\Api4`.
 
 ## <a name="credits"></a>Credits
 
